--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cross-env": "^10.1.0",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.6",
+    "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
