payment added init

--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,8 @@
 PORT = 8080
 DATABASE_URL = postgres://schoolofai:AISch00lPas123@13.235.223.181:5432/schoolofai
 ADMIN_JWT_SECRET=your_admin_jwt_secret
+
+
+EASEBUZZ_KEY=3AUXVHMKX
+EASEBUZZ_SALT=50JYB7BDX
+EASEBUZZ_ENV=test
