--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,8 @@
 PORT = 9090
 DATABASE_URL = postgres://schoolofai:AISch00lPas123@localhost:5432/schoolofai
 ADMIN_JWT_SECRET=admin_jwt_secret_12345
+
+EASEBUZZ_KEY=3AUXVHMKX
+EASEBUZZ_SALT=50JYB7BDX
+EASEBUZZ_ENV=test
+
