--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 PORT = 8080
 DATABASE_URL = postgres://schoolofai:AISch00lPas123@13.235.223.181:5432/schoolofai
 ADMIN_JWT_SECRET=your_admin_jwt_secret
-
+SERVER_URL = http://localhost:8080
 
 EASEBUZZ_KEY=3AUXVHMKX
 EASEBUZZ_SALT=50JYB7BDX
