--- a/.env.production
+++ b/.env.production
@@ -2,6 +2,7 @@ PORT = 9090
 DATABASE_URL = postgres://schoolofai:AISch00lPas123@localhost:5432/schoolofai
 ADMIN_JWT_SECRET=admin_jwt_secret_12345
 
+SERVER_URL = https://api.schoolofai.io
 EASEBUZZ_KEY=3AUXVHMKX
 EASEBUZZ_SALT=50JYB7BDX
 EASEBUZZ_ENV=test
