base urls refactored

--- a/.env.production
+++ b/.env.production
@@ -3,7 +3,16 @@ DATABASE_URL = postgres://schoolofai:AISch00lPas123@localhost:5432/schoolofai
 ADMIN_JWT_SECRET=admin_jwt_secret_12345
 
 SERVER_URL = https://api.schoolofai.io
+AI365_CLIENT = https://app.ai365.schoolofai.io
+
+
+#Test Env:
 EASEBUZZ_KEY=3AUXVHMKX
 EASEBUZZ_SALT=50JYB7BDX
 EASEBUZZ_ENV=test
+
+# Live Env:
+# EASEBUZZ_KEY=L1ZFWH4H4I
+# EASEBUZZ_SALT=6OZ9P0ZPE
+# EASEBUZZ_ENV=live
 
