--- a/.env.production
+++ b/.env.production
@@ -7,12 +7,12 @@ AI365_CLIENT = https://app.ai365.schoolofai.io
 
 
 #Test Env:
-EASEBUZZ_KEY=3AUXVHMKX
-EASEBUZZ_SALT=50JYB7BDX
-EASEBUZZ_ENV=test
+# EASEBUZZ_KEY=3AUXVHMKX
+# EASEBUZZ_SALT=50JYB7BDX
+# EASEBUZZ_ENV=test
 
 # Live Env:
-# EASEBUZZ_KEY=L1ZFWH4H4I
-# EASEBUZZ_SALT=6OZ9P0ZPE
-# EASEBUZZ_ENV=live
+EASEBUZZ_KEY=L1ZFWH4H4I
+EASEBUZZ_SALT=6OZ9P0ZPE
+EASEBUZZ_ENV=live
 
