5rs production mode

--- a/.env.development
+++ b/.env.development
@@ -4,6 +4,13 @@ ADMIN_JWT_SECRET=your_admin_jwt_secret
 
 SERVER_URL = http://localhost:8080
 AI365_CLIENT = http://localhost:5173
-EASEBUZZ_KEY=3AUXVHMKX
-EASEBUZZ_SALT=50JYB7BDX
-EASEBUZZ_ENV=test
+
+# TEST Mode
+# EASEBUZZ_KEY=3AUXVHMKX
+# EASEBUZZ_SALT=50JYB7BDX
+# EASEBUZZ_ENV=test
+
+# LIVE MODE
+EASEBUZZ_KEY=L1ZFWH4H4I
+EASEBUZZ_SALT=6OZ9P0ZPEW
+EASEBUZZ_ENV=live
