--- a/.env.production
+++ b/.env.production
@@ -13,6 +13,6 @@ AI365_CLIENT = https://app.ai365.schoolofai.io
 
 # Live Env:
 EASEBUZZ_KEY=L1ZFWH4H4I
-EASEBUZZ_SALT=6OZ9P0ZPE
+EASEBUZZ_SALT=6OZ9P0ZPEW
 EASEBUZZ_ENV=live
 
