--- a/.env.development
+++ b/.env.development
@@ -6,11 +6,11 @@ SERVER_URL = http://localhost:8080
 AI365_CLIENT = http://localhost:5173
 
 # TEST Mode
-# EASEBUZZ_KEY=3AUXVHMKX
-# EASEBUZZ_SALT=50JYB7BDX
-# EASEBUZZ_ENV=test
+EASEBUZZ_KEY=3AUXVHMKX
+EASEBUZZ_SALT=50JYB7BDX
+EASEBUZZ_ENV=test
 
 # LIVE MODE
-EASEBUZZ_KEY=L1ZFWH4H4I
-EASEBUZZ_SALT=6OZ9P0ZPEW
-EASEBUZZ_ENV=live
+# EASEBUZZ_KEY=L1ZFWH4H4I
+# EASEBUZZ_SALT=6OZ9P0ZPEW
+# EASEBUZZ_ENV=live
