--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
     "uuid": "^13.0.0",
+    "zeptomail": "^7.0.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
